// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`protocol v2 snapshots > captures a createAgent ReAct transcript snapshot 1`] = `
{
  "events": [
    {
      "data": {
        "eventId": "<event-id>",
        "method": "values",
        "params": {
          "data": {
            "messages": [
              {
                "content": "What is the weather in San Francisco?",
                "id": "<uuid>",
                "type": "human",
              },
              {
                "content": "",
                "id": "call-weather-1-message",
                "name": "model",
                "tool_calls": [
                  {
                    "args": {
                      "city": "San Francisco",
                    },
                    "id": "call-weather-1",
                    "name": "get_weather",
                    "type": "tool_call",
                  },
                ],
                "type": "ai",
              },
              {
                "content": "{"city":"San Francisco","temp_f":64,"condition":"Foggy"}",
                "id": "run-<id>",
                "name": "get_weather",
                "status": "success",
                "tool_call_id": "call-weather-1",
                "type": "tool",
              },
              {
                "content": "It's 64F and foggy in San Francisco.",
                "id": "call-weather-1-final",
                "name": "model",
                "type": "ai",
              },
              {
                "content": "What is the weather in San Francisco?",
                "id": "<uuid>",
                "type": "human",
              },
              {
                "content": "What is the weather in San Francisco?",
                "id": "<uuid>",
                "type": "human",
              },
              {
                "content": "What is the weather in San Francisco?",
                "id": "<uuid>",
                "type": "human",
              },
              {
                "content": "What is the weather in San Francisco?",
                "id": "<uuid>",
                "type": "human",
              },
              {
                "content": "What is the weather in San Francisco?",
                "id": "<uuid>",
                "type": "human",
              },
              {
                "content": "What is the weather in San Francisco?",
                "id": "<uuid>",
                "type": "human",
              },
              {
                "content": "What is the weather in San Francisco?",
                "id": "<uuid>",
                "type": "human",
              },
              {
                "content": "What is the weather in San Francisco?",
                "id": "<uuid>",
                "type": "human",
              },
              {
                "content": "What is the weather in San Francisco?",
                "id": "<uuid>",
                "type": "human",
              },
            ],
          },
          "namespace": [],
          "timestamp": "<timestamp>",
        },
        "seq": "<seq>",
        "type": "event",
      },
      "event": "values",
      "id": "<event-id>",
    },
    {
      "data": {
        "eventId": "<event-id>",
        "method": "values",
        "params": {
          "data": {
            "messages": [
              {
                "content": "What is the weather in San Francisco?",
                "id": "<uuid>",
                "type": "human",
              },
              {
                "content": "",
                "id": "call-weather-1-message",
                "name": "model",
                "tool_calls": [
                  {
                    "args": {
                      "city": "San Francisco",
                    },
                    "id": "call-weather-1",
                    "name": "get_weather",
                    "type": "tool_call",
                  },
                ],
                "type": "ai",
              },
              {
                "content": "{"city":"San Francisco","temp_f":64,"condition":"Foggy"}",
                "id": "run-<id>",
                "name": "get_weather",
                "status": "success",
                "tool_call_id": "call-weather-1",
                "type": "tool",
              },
              {
                "content": "It's 64F and foggy in San Francisco.",
                "id": "call-weather-1-final",
                "name": "model",
                "type": "ai",
              },
              {
                "content": "What is the weather in San Francisco?",
                "id": "<uuid>",
                "type": "human",
              },
              {
                "content": "What is the weather in San Francisco?",
                "id": "<uuid>",
                "type": "human",
              },
              {
                "content": "What is the weather in San Francisco?",
                "id": "<uuid>",
                "type": "human",
              },
              {
                "content": "What is the weather in San Francisco?",
                "id": "<uuid>",
                "type": "human",
              },
              {
                "content": "What is the weather in San Francisco?",
                "id": "<uuid>",
                "type": "human",
              },
              {
                "content": "What is the weather in San Francisco?",
                "id": "<uuid>",
                "type": "human",
              },
              {
                "content": "What is the weather in San Francisco?",
                "id": "<uuid>",
                "type": "human",
              },
              {
                "content": "What is the weather in San Francisco?",
                "id": "<uuid>",
                "type": "human",
              },
              {
                "content": "What is the weather in San Francisco?",
                "id": "<uuid>",
                "type": "human",
              },
            ],
          },
          "namespace": [],
          "timestamp": "<timestamp>",
        },
        "seq": "<seq>",
        "type": "event",
      },
      "event": "values",
      "id": "<event-id>",
    },
  ],
  "openResponse": {
    "id": 0,
    "meta": {
      "appliedThroughSeq": 0,
      "sessionId": "<session-id>",
    },
    "result": {
      "capabilities": {
        "contentBlockTypes": [
          "text",
          "reasoning",
          "tool_call",
          "tool_call_chunk",
          "invalid_tool_call",
          "server_tool_call",
          "server_tool_call_chunk",
          "server_tool_call_result",
          "image",
          "audio",
          "video",
          "file",
          "non_standard",
        ],
        "modules": [
          {
            "commands": [
              "session.open",
              "session.describe",
              "session.close",
            ],
            "name": "session",
          },
          {
            "commands": [
              "run.input",
            ],
            "name": "run",
          },
          {
            "commands": [
              "subscription.subscribe",
              "subscription.unsubscribe",
              "subscription.reconnect",
            ],
            "name": "subscription",
          },
          {
            "channels": [
              "lifecycle",
            ],
            "commands": [
              "agent.getTree",
            ],
            "events": [
              "spawned",
              "running",
              "completed",
              "failed",
              "interrupted",
            ],
            "name": "agent",
          },
          {
            "channels": [
              "values",
            ],
            "name": "values",
          },
          {
            "channels": [
              "updates",
            ],
            "name": "updates",
          },
          {
            "channels": [
              "messages",
            ],
            "name": "messages",
          },
          {
            "channels": [
              "tools",
            ],
            "name": "tools",
          },
          {
            "channels": [
              "custom",
            ],
            "name": "custom",
          },
          {
            "channels": [
              "debug",
            ],
            "name": "debug",
          },
          {
            "channels": [
              "checkpoints",
            ],
            "name": "checkpoints",
          },
          {
            "channels": [
              "tasks",
            ],
            "name": "tasks",
          },
          {
            "channels": [
              "state",
            ],
            "commands": [
              "state.get",
              "state.storeSearch",
              "state.storePut",
            ],
            "name": "state",
          },
        ],
        "payloadTypes": [
          "LifecycleEvent",
          "MessagesEvent",
          "ToolsEvent",
          "ValuesEvent",
          "UpdatesEvent",
          "CustomEvent",
          "DebugEvent",
          "CheckpointsEvent",
          "TasksEvent",
        ],
      },
      "commandsUrl": "/v2/sessions/<id>/commands",
      "eventsUrl": "/v2/sessions/<id>/events",
      "protocolVersion": "0.3.0",
      "sessionId": "<session-id>",
      "transport": {
        "commandDelivery": "request-response",
        "eventOrdering": "seq",
        "mediaTransferModes": [
          "artifact-only",
          "upgrade-to-websocket",
        ],
        "name": "sse-http",
      },
    },
    "type": "success",
  },
  "runResponse": {
    "id": 2,
    "meta": {
      "appliedThroughSeq": 0,
      "sessionId": "<session-id>",
    },
    "result": {
      "runId": "<run-id>",
    },
    "type": "success",
  },
  "stateResponse": {
    "id": 4,
    "meta": {
      "appliedThroughSeq": 0,
      "sessionId": "<session-id>",
    },
    "result": {
      "checkpoint": {
        "id": "<uuid>",
        "ns": "",
      },
      "values": {
        "messages": [
          {
            "additional_kwargs": {},
            "content": "What is the weather in San Francisco?",
            "id": "<uuid>",
            "response_metadata": {},
            "type": "human",
          },
          {
            "additional_kwargs": {},
            "content": "",
            "id": "call-weather-1-message",
            "invalid_tool_calls": [],
            "name": "model",
            "response_metadata": {},
            "tool_call_chunks": [
              {
                "args": "{"city":"San Francisco"}",
                "id": "call-weather-1",
                "index": 0,
                "name": "get_weather",
                "type": "tool_call_chunk",
              },
            ],
            "tool_calls": [
              {
                "args": {
                  "city": "San Francisco",
                },
                "id": "call-weather-1",
                "name": "get_weather",
                "type": "tool_call",
              },
            ],
            "type": "ai",
          },
          {
            "additional_kwargs": {},
            "content": "{"city":"San Francisco","temp_f":64,"condition":"Foggy"}",
            "id": "run-<id>",
            "metadata": {
              "versions": {
                "@langchain/core": "1.1.31",
              },
            },
            "name": "get_weather",
            "response_metadata": {},
            "status": "success",
            "tool_call_id": "call-weather-1",
            "type": "tool",
          },
          {
            "additional_kwargs": {},
            "content": "It's 64F and foggy in San Francisco.",
            "id": "call-weather-1-final",
            "invalid_tool_calls": [],
            "name": "model",
            "response_metadata": {},
            "tool_call_chunks": [],
            "tool_calls": [],
            "type": "ai",
          },
          {
            "additional_kwargs": {},
            "content": "What is the weather in San Francisco?",
            "id": "<uuid>",
            "response_metadata": {},
            "type": "human",
          },
          {
            "additional_kwargs": {},
            "content": "What is the weather in San Francisco?",
            "id": "<uuid>",
            "response_metadata": {},
            "type": "human",
          },
          {
            "additional_kwargs": {},
            "content": "What is the weather in San Francisco?",
            "id": "<uuid>",
            "response_metadata": {},
            "type": "human",
          },
          {
            "additional_kwargs": {},
            "content": "What is the weather in San Francisco?",
            "id": "<uuid>",
            "response_metadata": {},
            "type": "human",
          },
          {
            "additional_kwargs": {},
            "content": "What is the weather in San Francisco?",
            "id": "<uuid>",
            "response_metadata": {},
            "type": "human",
          },
          {
            "additional_kwargs": {},
            "content": "What is the weather in San Francisco?",
            "id": "<uuid>",
            "response_metadata": {},
            "type": "human",
          },
          {
            "additional_kwargs": {},
            "content": "What is the weather in San Francisco?",
            "id": "<uuid>",
            "response_metadata": {},
            "type": "human",
          },
          {
            "additional_kwargs": {},
            "content": "What is the weather in San Francisco?",
            "id": "<uuid>",
            "response_metadata": {},
            "type": "human",
          },
        ],
      },
    },
    "type": "success",
  },
  "subscribeResponse": {
    "id": 1,
    "meta": {
      "appliedThroughSeq": 0,
      "sessionId": "<session-id>",
    },
    "result": {
      "replayedEvents": 0,
      "subscriptionId": "<subscription-id>",
    },
    "type": "success",
  },
  "treeResponse": {
    "id": 3,
    "meta": {
      "appliedThroughSeq": 0,
      "sessionId": "<session-id>",
    },
    "result": {
      "tree": {
        "graphName": "create_agent",
        "namespace": [],
        "status": "running",
      },
    },
    "type": "success",
  },
}
`;

exports[`protocol v2 snapshots > captures a createDeepAgent transcript snapshot 1`] = `
{
  "events": [
    {
      "data": {
        "eventId": "<event-id>",
        "method": "lifecycle",
        "params": {
          "data": {
            "event": "running",
            "graphName": "deep_agent",
          },
          "namespace": [],
          "timestamp": "<timestamp>",
        },
        "seq": "<seq>",
        "type": "event",
      },
      "event": "lifecycle",
      "id": "<event-id>",
    },
  ],
  "openResponse": {
    "id": 0,
    "meta": {
      "appliedThroughSeq": 0,
      "sessionId": "<session-id>",
    },
    "result": {
      "capabilities": {
        "contentBlockTypes": [
          "text",
          "reasoning",
          "tool_call",
          "tool_call_chunk",
          "invalid_tool_call",
          "server_tool_call",
          "server_tool_call_chunk",
          "server_tool_call_result",
          "image",
          "audio",
          "video",
          "file",
          "non_standard",
        ],
        "modules": [
          {
            "commands": [
              "session.open",
              "session.describe",
              "session.close",
            ],
            "name": "session",
          },
          {
            "commands": [
              "run.input",
            ],
            "name": "run",
          },
          {
            "commands": [
              "subscription.subscribe",
              "subscription.unsubscribe",
              "subscription.reconnect",
            ],
            "name": "subscription",
          },
          {
            "channels": [
              "lifecycle",
            ],
            "commands": [
              "agent.getTree",
            ],
            "events": [
              "spawned",
              "running",
              "completed",
              "failed",
              "interrupted",
            ],
            "name": "agent",
          },
          {
            "channels": [
              "values",
            ],
            "name": "values",
          },
          {
            "channels": [
              "updates",
            ],
            "name": "updates",
          },
          {
            "channels": [
              "messages",
            ],
            "name": "messages",
          },
          {
            "channels": [
              "tools",
            ],
            "name": "tools",
          },
          {
            "channels": [
              "custom",
            ],
            "name": "custom",
          },
          {
            "channels": [
              "debug",
            ],
            "name": "debug",
          },
          {
            "channels": [
              "checkpoints",
            ],
            "name": "checkpoints",
          },
          {
            "channels": [
              "tasks",
            ],
            "name": "tasks",
          },
          {
            "channels": [
              "state",
            ],
            "commands": [
              "state.get",
              "state.storeSearch",
              "state.storePut",
            ],
            "name": "state",
          },
        ],
        "payloadTypes": [
          "LifecycleEvent",
          "MessagesEvent",
          "ToolsEvent",
          "ValuesEvent",
          "UpdatesEvent",
          "CustomEvent",
          "DebugEvent",
          "CheckpointsEvent",
          "TasksEvent",
        ],
      },
      "commandsUrl": "/v2/sessions/<id>/commands",
      "eventsUrl": "/v2/sessions/<id>/events",
      "protocolVersion": "0.3.0",
      "sessionId": "<session-id>",
      "transport": {
        "commandDelivery": "request-response",
        "eventOrdering": "seq",
        "mediaTransferModes": [
          "artifact-only",
          "upgrade-to-websocket",
        ],
        "name": "sse-http",
      },
    },
    "type": "success",
  },
  "runResponse": {
    "id": 2,
    "meta": {
      "appliedThroughSeq": 1,
      "sessionId": "<session-id>",
    },
    "result": {
      "runId": "<run-id>",
    },
    "type": "success",
  },
  "stateResponse": {
    "id": 4,
    "meta": {
      "appliedThroughSeq": 1,
      "sessionId": "<session-id>",
    },
    "result": {
      "checkpoint": {
        "id": "<uuid>",
        "ns": "",
      },
      "values": {
        "files": {},
        "messages": [
          {
            "additional_kwargs": {},
            "content": "Research protocol risks and inspect the sample dataset.",
            "id": "<uuid>",
            "response_metadata": {},
            "type": "human",
          },
          {
            "additional_kwargs": {},
            "content": "",
            "id": "deep-orchestrator-tool-call",
            "invalid_tool_calls": [],
            "name": "model",
            "response_metadata": {},
            "tool_call_chunks": [
              {
                "args": "{"description":"Search the web for protocol risks","subagent_type":"researcher"}",
                "id": "task-1",
                "index": 0,
                "name": "task",
                "type": "tool_call_chunk",
              },
              {
                "args": "{"description":"Inspect the sample dataset","subagent_type":"data-analyst"}",
                "id": "task-2",
                "index": 1,
                "name": "task",
                "type": "tool_call_chunk",
              },
            ],
            "tool_calls": [
              {
                "args": {
                  "description": "Search the web for protocol risks",
                  "subagent_type": "researcher",
                },
                "id": "task-1",
                "name": "task",
                "type": "tool_call",
              },
              {
                "args": {
                  "description": "Inspect the sample dataset",
                  "subagent_type": "data-analyst",
                },
                "id": "task-2",
                "name": "task",
                "type": "tool_call",
              },
            ],
            "type": "ai",
          },
          {
            "additional_kwargs": {},
            "content": "Research completed: reconnect and lifecycle handling need coverage.",
            "id": "<uuid>",
            "name": "task",
            "response_metadata": {},
            "tool_call_id": "task-1",
            "type": "tool",
          },
          {
            "additional_kwargs": {},
            "content": "Analysis completed: found 2 sample records.",
            "id": "<uuid>",
            "name": "task",
            "response_metadata": {},
            "tool_call_id": "task-2",
            "type": "tool",
          },
          {
            "additional_kwargs": {},
            "content": "Both subagents completed their tasks successfully.",
            "id": "deep-orchestrator-final",
            "invalid_tool_calls": [],
            "name": "model",
            "response_metadata": {},
            "tool_call_chunks": [],
            "tool_calls": [],
            "type": "ai",
          },
          {
            "additional_kwargs": {},
            "content": "Research protocol risks and inspect the sample dataset.",
            "id": "<uuid>",
            "response_metadata": {},
            "type": "human",
          },
          {
            "additional_kwargs": {},
            "content": "Research protocol risks and inspect the sample dataset.",
            "id": "<uuid>",
            "response_metadata": {},
            "type": "human",
          },
          {
            "additional_kwargs": {},
            "content": "Research protocol risks and inspect the sample dataset.",
            "id": "<uuid>",
            "response_metadata": {},
            "type": "human",
          },
          {
            "additional_kwargs": {},
            "content": "Research protocol risks and inspect the sample dataset.",
            "id": "<uuid>",
            "response_metadata": {},
            "type": "human",
          },
          {
            "additional_kwargs": {},
            "content": "Research protocol risks and inspect the sample dataset.",
            "id": "<uuid>",
            "response_metadata": {},
            "type": "human",
          },
          {
            "additional_kwargs": {},
            "content": "Research protocol risks and inspect the sample dataset.",
            "id": "<uuid>",
            "response_metadata": {},
            "type": "human",
          },
          {
            "additional_kwargs": {},
            "content": "Research protocol risks and inspect the sample dataset.",
            "id": "<uuid>",
            "response_metadata": {},
            "type": "human",
          },
          {
            "additional_kwargs": {},
            "content": "Research protocol risks and inspect the sample dataset.",
            "id": "<uuid>",
            "response_metadata": {},
            "type": "human",
          },
        ],
        "todos": [],
      },
    },
    "type": "success",
  },
  "subscribeResponse": {
    "id": 1,
    "meta": {
      "appliedThroughSeq": 0,
      "sessionId": "<session-id>",
    },
    "result": {
      "replayedEvents": 0,
      "subscriptionId": "<subscription-id>",
    },
    "type": "success",
  },
  "treeResponse": {
    "id": 3,
    "meta": {
      "appliedThroughSeq": 1,
      "sessionId": "<session-id>",
    },
    "result": {
      "tree": {
        "graphName": "deep_agent",
        "namespace": [],
        "status": "running",
      },
    },
    "type": "success",
  },
}
`;

exports[`protocol v2 snapshots > captures a stategraph transcript snapshot 1`] = `
{
  "events": [
    {
      "data": {
        "eventId": "<event-id>",
        "method": "values",
        "params": {
          "data": {
            "messages": [
              {
                "content": "Summarize the protocol draft.",
                "id": "<uuid>",
                "type": "human",
              },
              {
                "content": "Plan accepted.",
                "id": "stategraph-message-0",
                "type": "ai",
              },
              {
                "content": "Summarize the protocol draft.",
                "id": "<uuid>",
                "type": "human",
              },
              {
                "content": "Summarize the protocol draft.",
                "id": "<uuid>",
                "type": "human",
              },
              {
                "content": "Plan accepted.",
                "id": "stategraph-message-1",
                "type": "ai",
              },
              {
                "content": "Summarize the protocol draft.",
                "id": "<uuid>",
                "type": "human",
              },
              {
                "content": "Summarize the protocol draft.",
                "id": "<uuid>",
                "type": "human",
              },
              {
                "content": "Summarize the protocol draft.",
                "id": "<uuid>",
                "type": "human",
              },
              {
                "content": "Summarize the protocol draft.",
                "id": "<uuid>",
                "type": "human",
              },
              {
                "content": "Summarize the protocol draft.",
                "id": "<uuid>",
                "type": "human",
              },
              {
                "content": "Summarize the protocol draft.",
                "id": "<uuid>",
                "type": "human",
              },
              {
                "content": "Summarize the protocol draft.",
                "id": "<uuid>",
                "type": "human",
              },
            ],
          },
          "namespace": [],
          "timestamp": "<timestamp>",
        },
        "seq": "<seq>",
        "type": "event",
      },
      "event": "values",
      "id": "<event-id>",
    },
    {
      "data": {
        "eventId": "<event-id>",
        "method": "messages",
        "params": {
          "data": {
            "event": "message-start",
            "messageId": "stategraph-message-0",
            "metadata": {
              "modelType": "chat",
              "provider": "FakeListChatModel",
              "runId": "<run-id>",
              "threadId": "<thread-id>",
              "user_id": "protocol-v2-user",
            },
          },
          "namespace": [
            "agent:<uuid>",
          ],
          "timestamp": "<timestamp>",
        },
        "seq": "<seq>",
        "type": "event",
      },
      "event": "messages",
      "id": "<event-id>",
    },
    {
      "data": {
        "eventId": "<event-id>",
        "method": "messages",
        "params": {
          "data": {
            "contentBlock": {
              "text": "",
              "type": "text",
            },
            "event": "content-block-start",
            "index": 0,
          },
          "namespace": [
            "agent:<uuid>",
          ],
          "timestamp": "<timestamp>",
        },
        "seq": "<seq>",
        "type": "event",
      },
      "event": "messages",
      "id": "<event-id>",
    },
    {
      "data": {
        "eventId": "<event-id>",
        "method": "messages",
        "params": {
          "data": {
            "contentBlock": {
              "text": "P",
              "type": "text",
            },
            "event": "content-block-delta",
            "index": 0,
          },
          "namespace": [
            "agent:<uuid>",
          ],
          "timestamp": "<timestamp>",
        },
        "seq": "<seq>",
        "type": "event",
      },
      "event": "messages",
      "id": "<event-id>",
    },
    {
      "data": {
        "eventId": "<event-id>",
        "method": "messages",
        "params": {
          "data": {
            "contentBlock": {
              "text": "l",
              "type": "text",
            },
            "event": "content-block-delta",
            "index": 0,
          },
          "namespace": [
            "agent:<uuid>",
          ],
          "timestamp": "<timestamp>",
        },
        "seq": "<seq>",
        "type": "event",
      },
      "event": "messages",
      "id": "<event-id>",
    },
    {
      "data": {
        "eventId": "<event-id>",
        "method": "messages",
        "params": {
          "data": {
            "contentBlock": {
              "text": "a",
              "type": "text",
            },
            "event": "content-block-delta",
            "index": 0,
          },
          "namespace": [
            "agent:<uuid>",
          ],
          "timestamp": "<timestamp>",
        },
        "seq": "<seq>",
        "type": "event",
      },
      "event": "messages",
      "id": "<event-id>",
    },
    {
      "data": {
        "eventId": "<event-id>",
        "method": "messages",
        "params": {
          "data": {
            "contentBlock": {
              "text": "n",
              "type": "text",
            },
            "event": "content-block-delta",
            "index": 0,
          },
          "namespace": [
            "agent:<uuid>",
          ],
          "timestamp": "<timestamp>",
        },
        "seq": "<seq>",
        "type": "event",
      },
      "event": "messages",
      "id": "<event-id>",
    },
    {
      "data": {
        "eventId": "<event-id>",
        "method": "messages",
        "params": {
          "data": {
            "contentBlock": {
              "text": " ",
              "type": "text",
            },
            "event": "content-block-delta",
            "index": 0,
          },
          "namespace": [
            "agent:<uuid>",
          ],
          "timestamp": "<timestamp>",
        },
        "seq": "<seq>",
        "type": "event",
      },
      "event": "messages",
      "id": "<event-id>",
    },
    {
      "data": {
        "eventId": "<event-id>",
        "method": "messages",
        "params": {
          "data": {
            "contentBlock": {
              "text": "a",
              "type": "text",
            },
            "event": "content-block-delta",
            "index": 0,
          },
          "namespace": [
            "agent:<uuid>",
          ],
          "timestamp": "<timestamp>",
        },
        "seq": "<seq>",
        "type": "event",
      },
      "event": "messages",
      "id": "<event-id>",
    },
    {
      "data": {
        "eventId": "<event-id>",
        "method": "messages",
        "params": {
          "data": {
            "contentBlock": {
              "text": "c",
              "type": "text",
            },
            "event": "content-block-delta",
            "index": 0,
          },
          "namespace": [
            "agent:<uuid>",
          ],
          "timestamp": "<timestamp>",
        },
        "seq": "<seq>",
        "type": "event",
      },
      "event": "messages",
      "id": "<event-id>",
    },
    {
      "data": {
        "eventId": "<event-id>",
        "method": "messages",
        "params": {
          "data": {
            "contentBlock": {
              "text": "c",
              "type": "text",
            },
            "event": "content-block-delta",
            "index": 0,
          },
          "namespace": [
            "agent:<uuid>",
          ],
          "timestamp": "<timestamp>",
        },
        "seq": "<seq>",
        "type": "event",
      },
      "event": "messages",
      "id": "<event-id>",
    },
    {
      "data": {
        "eventId": "<event-id>",
        "method": "messages",
        "params": {
          "data": {
            "contentBlock": {
              "text": "e",
              "type": "text",
            },
            "event": "content-block-delta",
            "index": 0,
          },
          "namespace": [
            "agent:<uuid>",
          ],
          "timestamp": "<timestamp>",
        },
        "seq": "<seq>",
        "type": "event",
      },
      "event": "messages",
      "id": "<event-id>",
    },
    {
      "data": {
        "eventId": "<event-id>",
        "method": "messages",
        "params": {
          "data": {
            "contentBlock": {
              "text": "p",
              "type": "text",
            },
            "event": "content-block-delta",
            "index": 0,
          },
          "namespace": [
            "agent:<uuid>",
          ],
          "timestamp": "<timestamp>",
        },
        "seq": "<seq>",
        "type": "event",
      },
      "event": "messages",
      "id": "<event-id>",
    },
    {
      "data": {
        "eventId": "<event-id>",
        "method": "messages",
        "params": {
          "data": {
            "contentBlock": {
              "text": "t",
              "type": "text",
            },
            "event": "content-block-delta",
            "index": 0,
          },
          "namespace": [
            "agent:<uuid>",
          ],
          "timestamp": "<timestamp>",
        },
        "seq": "<seq>",
        "type": "event",
      },
      "event": "messages",
      "id": "<event-id>",
    },
    {
      "data": {
        "eventId": "<event-id>",
        "method": "messages",
        "params": {
          "data": {
            "contentBlock": {
              "text": "e",
              "type": "text",
            },
            "event": "content-block-delta",
            "index": 0,
          },
          "namespace": [
            "agent:<uuid>",
          ],
          "timestamp": "<timestamp>",
        },
        "seq": "<seq>",
        "type": "event",
      },
      "event": "messages",
      "id": "<event-id>",
    },
    {
      "data": {
        "eventId": "<event-id>",
        "method": "messages",
        "params": {
          "data": {
            "contentBlock": {
              "text": "d",
              "type": "text",
            },
            "event": "content-block-delta",
            "index": 0,
          },
          "namespace": [
            "agent:<uuid>",
          ],
          "timestamp": "<timestamp>",
        },
        "seq": "<seq>",
        "type": "event",
      },
      "event": "messages",
      "id": "<event-id>",
    },
    {
      "data": {
        "eventId": "<event-id>",
        "method": "messages",
        "params": {
          "data": {
            "contentBlock": {
              "text": ".",
              "type": "text",
            },
            "event": "content-block-delta",
            "index": 0,
          },
          "namespace": [
            "agent:<uuid>",
          ],
          "timestamp": "<timestamp>",
        },
        "seq": "<seq>",
        "type": "event",
      },
      "event": "messages",
      "id": "<event-id>",
    },
    {
      "data": {
        "eventId": "<event-id>",
        "method": "values",
        "params": {
          "data": {
            "messages": [
              {
                "content": "Summarize the protocol draft.",
                "id": "<uuid>",
                "type": "human",
              },
              {
                "content": "Plan accepted.",
                "id": "stategraph-message-0",
                "type": "ai",
              },
              {
                "content": "Summarize the protocol draft.",
                "id": "<uuid>",
                "type": "human",
              },
              {
                "content": "Summarize the protocol draft.",
                "id": "<uuid>",
                "type": "human",
              },
              {
                "content": "Plan accepted.",
                "id": "stategraph-message-1",
                "type": "ai",
              },
              {
                "content": "Summarize the protocol draft.",
                "id": "<uuid>",
                "type": "human",
              },
              {
                "content": "Summarize the protocol draft.",
                "id": "<uuid>",
                "type": "human",
              },
              {
                "content": "Summarize the protocol draft.",
                "id": "<uuid>",
                "type": "human",
              },
              {
                "content": "Summarize the protocol draft.",
                "id": "<uuid>",
                "type": "human",
              },
              {
                "content": "Summarize the protocol draft.",
                "id": "<uuid>",
                "type": "human",
              },
              {
                "content": "Summarize the protocol draft.",
                "id": "<uuid>",
                "type": "human",
              },
              {
                "content": "Summarize the protocol draft.",
                "id": "<uuid>",
                "type": "human",
              },
            ],
          },
          "namespace": [],
          "timestamp": "<timestamp>",
        },
        "seq": "<seq>",
        "type": "event",
      },
      "event": "values",
      "id": "<event-id>",
    },
  ],
  "openResponse": {
    "id": 0,
    "meta": {
      "appliedThroughSeq": 0,
      "sessionId": "<session-id>",
    },
    "result": {
      "capabilities": {
        "contentBlockTypes": [
          "text",
          "reasoning",
          "tool_call",
          "tool_call_chunk",
          "invalid_tool_call",
          "server_tool_call",
          "server_tool_call_chunk",
          "server_tool_call_result",
          "image",
          "audio",
          "video",
          "file",
          "non_standard",
        ],
        "modules": [
          {
            "commands": [
              "session.open",
              "session.describe",
              "session.close",
            ],
            "name": "session",
          },
          {
            "commands": [
              "run.input",
            ],
            "name": "run",
          },
          {
            "commands": [
              "subscription.subscribe",
              "subscription.unsubscribe",
              "subscription.reconnect",
            ],
            "name": "subscription",
          },
          {
            "channels": [
              "lifecycle",
            ],
            "commands": [
              "agent.getTree",
            ],
            "events": [
              "spawned",
              "running",
              "completed",
              "failed",
              "interrupted",
            ],
            "name": "agent",
          },
          {
            "channels": [
              "values",
            ],
            "name": "values",
          },
          {
            "channels": [
              "updates",
            ],
            "name": "updates",
          },
          {
            "channels": [
              "messages",
            ],
            "name": "messages",
          },
          {
            "channels": [
              "tools",
            ],
            "name": "tools",
          },
          {
            "channels": [
              "custom",
            ],
            "name": "custom",
          },
          {
            "channels": [
              "debug",
            ],
            "name": "debug",
          },
          {
            "channels": [
              "checkpoints",
            ],
            "name": "checkpoints",
          },
          {
            "channels": [
              "tasks",
            ],
            "name": "tasks",
          },
          {
            "channels": [
              "state",
            ],
            "commands": [
              "state.get",
              "state.storeSearch",
              "state.storePut",
            ],
            "name": "state",
          },
        ],
        "payloadTypes": [
          "LifecycleEvent",
          "MessagesEvent",
          "ToolsEvent",
          "ValuesEvent",
          "UpdatesEvent",
          "CustomEvent",
          "DebugEvent",
          "CheckpointsEvent",
          "TasksEvent",
        ],
      },
      "commandsUrl": "/v2/sessions/<id>/commands",
      "eventsUrl": "/v2/sessions/<id>/events",
      "protocolVersion": "0.3.0",
      "sessionId": "<session-id>",
      "transport": {
        "commandDelivery": "request-response",
        "eventOrdering": "seq",
        "mediaTransferModes": [
          "artifact-only",
          "upgrade-to-websocket",
        ],
        "name": "sse-http",
      },
    },
    "type": "success",
  },
  "runResponse": {
    "id": 2,
    "meta": {
      "appliedThroughSeq": 0,
      "sessionId": "<session-id>",
    },
    "result": {
      "runId": "<run-id>",
    },
    "type": "success",
  },
  "stateResponse": {
    "id": 4,
    "meta": {
      "appliedThroughSeq": 0,
      "sessionId": "<session-id>",
    },
    "result": {
      "checkpoint": {
        "id": "<uuid>",
        "ns": "",
      },
      "values": {
        "messages": [
          {
            "additional_kwargs": {},
            "content": "Summarize the protocol draft.",
            "id": "<uuid>",
            "response_metadata": {},
            "type": "human",
          },
          {
            "additional_kwargs": {},
            "content": "Plan accepted.",
            "id": "stategraph-message-0",
            "invalid_tool_calls": [],
            "response_metadata": {},
            "tool_call_chunks": [],
            "tool_calls": [],
            "type": "ai",
          },
          {
            "additional_kwargs": {},
            "content": "Summarize the protocol draft.",
            "id": "<uuid>",
            "response_metadata": {},
            "type": "human",
          },
          {
            "additional_kwargs": {},
            "content": "Summarize the protocol draft.",
            "id": "<uuid>",
            "response_metadata": {},
            "type": "human",
          },
          {
            "additional_kwargs": {},
            "content": "Plan accepted.",
            "id": "stategraph-message-1",
            "invalid_tool_calls": [],
            "response_metadata": {},
            "tool_call_chunks": [],
            "tool_calls": [],
            "type": "ai",
          },
          {
            "additional_kwargs": {},
            "content": "Summarize the protocol draft.",
            "id": "<uuid>",
            "response_metadata": {},
            "type": "human",
          },
          {
            "additional_kwargs": {},
            "content": "Summarize the protocol draft.",
            "id": "<uuid>",
            "response_metadata": {},
            "type": "human",
          },
          {
            "additional_kwargs": {},
            "content": "Summarize the protocol draft.",
            "id": "<uuid>",
            "response_metadata": {},
            "type": "human",
          },
          {
            "additional_kwargs": {},
            "content": "Summarize the protocol draft.",
            "id": "<uuid>",
            "response_metadata": {},
            "type": "human",
          },
          {
            "additional_kwargs": {},
            "content": "Summarize the protocol draft.",
            "id": "<uuid>",
            "response_metadata": {},
            "type": "human",
          },
          {
            "additional_kwargs": {},
            "content": "Summarize the protocol draft.",
            "id": "<uuid>",
            "response_metadata": {},
            "type": "human",
          },
        ],
      },
    },
    "type": "success",
  },
  "subscribeResponse": {
    "id": 1,
    "meta": {
      "appliedThroughSeq": 0,
      "sessionId": "<session-id>",
    },
    "result": {
      "replayedEvents": 0,
      "subscriptionId": "<subscription-id>",
    },
    "type": "success",
  },
  "treeResponse": {
    "id": 3,
    "meta": {
      "appliedThroughSeq": 0,
      "sessionId": "<session-id>",
    },
    "result": {
      "tree": {
        "graphName": "stategraph_text",
        "namespace": [],
        "status": "running",
      },
    },
    "type": "success",
  },
}
`;
